# tiny-profiler-aya-rs

./: Cargo.toml  README.md
.vim/: coc-settings.json
tiny-profiler/: Cargo.toml
tiny-profiler-common/: Cargo.toml
tiny-profiler-ebpf/: Cargo.toml
tiny-profiler-ebpf/src/: main.rs
tiny-profiler/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
